# icfpc2024

./: .gitignore  Cargo.toml  README.md  minify-submit.sh
.github/workflows/: reporter.yaml
answers/3d/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
answers/efficiency/: 1.txt  13.txt  2.txt  4.txt
answers/lambdaman/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
answers/spaceship/: 10.txt  11.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
notes/: ICFP-language.md  a01sa01to.md  problem-translation.md  sor4chi.md
notes/3d/: intro-ja.md  intro.md
notes/efficiency/: intro-ja.md
notes/lambdaman/: intro-ja.md  intro.md
notes/spaceship/: intro-ja.md  intro.md
problems/lambdaman/: 21.txt
scripts/: reporter.ts
src/: evaluator.rs  icfp.rs  lib.rs  parser.rs  three_d.rs  tokenizer.rs  util.rs
src/icfp/: builtin.rs  evaluator.rs  parser.rs  tokenizer.rs  transpiler.rs  util.rs
src/three_d/: emulator.rs  tokenizer.rs
visualizer/: package.json  pnpm-lock.yaml
visualizer-3d/: index.html  main.js
visualizer-3d-neo/: package.json  pnpm-lock.yaml
visualizer-3d-neo/src/: App.css  App.tsx  game.ts
visualizer/wasm/src/: lib.rs
